app_controllers/infrastructure/kubernetes-deployments/services/nginx-modsecurity/02_service-docker-desktop-nginx-modsecurity-charles.yml

apiVersion: v1
kind: Service
metadata:
  name: nginx-modsecurity-charles
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx-modsecurity-charles.docker-desktop.securethebox.us
spec:
  selector:
    app: nginx-modsecurity-charles
  ports:
  - name: http
    targetPort: 80
    port: 80
  - name: cloudcmd
    targetPort: 9000
    port: 9000
